# pet-classifier

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-frontend.txt
.github/workflows/: ci.yml
app/: __init__.py
app/api/: main.py
app/frontend/: streamlit_app.py
app/inference/: __init__.py  config.py  grad_cam.py  mlflow_model.py  model_registry.py  predictor.py  transforms.py
app/inference/models/: __init__.py  efficientnet.py  registry.py  simple_cnn.py
app/models/hpo/: exp3_best_params.json
app/observability/: __init__.py  inference_store.py  logging.py  monitoring.py
app/schemas/: __init__.py  prediction.py
tests/: test_api.py  test_api_integration.py  test_compare.py  test_dataset.py  test_grad_cam.py  test_inference_store.py  test_mlflow_registry.py  test_model_registry.py  test_observability.py  test_optim.py  test_schemas.py  test_transfer_learning.py
training/: __init__.py  compare.py  config.py  dataset.py  evaluate.py  optim.py  plots.py  register.py  registry.py  train.py  transfer_learning.py  transforms.py  tune.py
training/models/: __init__.py  efficientnet.py  registry.py  simple_cnn.py
