[project]
name = "petvision-ai"
version = "0.1.0"
description = "Production-grade image classification platform using PyTorch, FastAPI, Docker and MLOps practices."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.136.3",
    "matplotlib>=3.10.0",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "optuna>=4.0.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scikit-learn>=1.6.0",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "training"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "training", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app", "training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app", "training"]
omit = ["tests/*"]
