[project]
name = "petvision-ai"
version = "0.1.0"
description = "Production-grade image classification platform using PyTorch, FastAPI, Docker and MLOps practices."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "matplotlib>=3.10.0",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.20",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
training = [
    "albumentations>=2.0.8",
    "optuna>=4.0.0",
    "scikit-learn>=1.6.0",
]
frontend = [
    "streamlit>=1.58.0",
    "requests>=2.34.2",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "pre-commit>=4.6.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "training"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "training", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app", "training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app", "training"]
omit = ["tests/*"]
